--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "license": "ISC",
   "author": "Harshal Laware",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
